add example roofline plots for README visualization
- update .gitignore to include example plots
- roofline_cpu-cuda-metal.png: multi-device comparison
- roofline_cpu.png: CPU performance scaling analysis

these plots demonstrate real benchmark output

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ results/*
 !results/.gitkeep
 plots/*
 !plots/.gitkeep
+!plots/roofline_cpu-cuda-metal.png
+!plots/roofline_cpu.png
 
 # Python
 __pycache__/
